# Dedi

./: CMakeLists.txt  LICENSE  README.md
inc/: access.h  gui.h  status.h  steam.h  util.h  win.h  world.h
inc/clip/: LICENSE.txt
inc/dirent/: dirent.h
inc/inih/: ini.h
inc/miniz/: miniz.h
inc/raygui/: LICENSE  dialog.h  raygui.h
inc/vdf/: vdf.h
lib/: clip.lib  clip_x64.lib  clip_x86.lib  raylib_x86.lib
src/: dedi.cpp  gui.cpp  gui_config.cpp  gui_options.cpp  gui_saves.cpp  gui_server.cpp  gui_world.cpp  status.cpp  steam.cpp  util.cpp  win.cpp  world.cpp
styles/: 80s.rgs  ashes.rgs  boring.rgs  candy.rgs  cherry.rgs  lavanda.rgs  mono.rgs  oldman.rgs  sunny.rgs  under.rgs
